<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cejteam.ticketmanager.EditarEvento">




    <Spinner
        android:id="@+id/editarspinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/layoutprincipal"
        android:layout_below="@id/editarspinner"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


    <LinearLayout

        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:layout_below="@id/editarspinner"
        android:background="@color/blanco"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:orientation="vertical">


            <TextView

                android:id="@+id/eventcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blanco"
                android:text="@string/event_code"
                android:textColor="@color/negro"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editarcodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="12"
                android:hint="@string/event"
                android:inputType="number" />

            <TextView
                android:id="@+id/eventtittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/blanco"
                android:text="@string/title_event"
                android:textColor="@color/negro"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editartitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/eventdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/blanco"
                android:text="@string/event_description"
                android:textColor="@color/negro"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editardescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:textColor="@color/negro" />

            <TextView
                android:id="@+id/dateevent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/blanco"
                android:text="@string/date_event"
                android:textColor="@color/negro"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editarfecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:onClick="mostrarCalendar" />


            <TextView
                android:id="@+id/eventamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/blanco"
                android:text="@string/event_amount"
                android:textColor="@color/negro"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editaramount"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="textPersonName" />


        </LinearLayout>


    </LinearLayout>
        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/editarcheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:text="check"
            tools:layout_centerInParent="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/check"
        android:layout_width="match_parent"
        android:layout_below="@+id/layoutprincipal"
        android:text="SAVED"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_centerInParent="true"
        android:layout_height="match_parent">

        <Button

            android:id="@+id/editarsaved"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:text="SAVED"
            tools:layout_centerInParent="true" />

    </LinearLayout>



</RelativeLayout>
