<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cejteam.ticketmanager.TipodeEvento">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/seleccion"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="32dp"
        android:textColor="@color/colorPrimary"/>
    <LinearLayout
        android:padding="30dp"
        android:id="@+id/linearprincipal"
        android:layout_marginTop="15dp"
        android:layout_below="@id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:layout_centerInParent="true"
        android:orientation="vertical">



        <Button
            android:id="@+id/deportivo"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="18dp"
            android:textStyle="italic"
            android:textSize="20dp"
            android:text="@string/deporte"
            />

        <Button
            android:id="@+id/musical"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="18dp"
            android:textSize="20dp"
            android:text="@string/musica" />

        <Button

            android:layout_width="300dp"
            android:layout_height="60dp"
            android:textSize="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/religion"
            android:id="@+id/religioso"
            />
    </LinearLayout>

</RelativeLayout>
